--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Investitionsprojekt{% endblock %}
 
 {% block content %}
-<h1>Hallo</h1>
+<h1>Investitionsprojekte</h1>
 <p>
     Mittels untenstehenden Buttons kannst du ein Antrag für ein neues Investitionsprojekt erstellen oder zur Übersicht navigieren.<br><br>
     <a class="btn btn-primary btn-lg" href="{{ url_for('formular') }}" role="button" type="submit">Investitionsprojekt beantragen</a>
