--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,10 @@
 
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <div class="p-5">
+        {% block content %}
+        {% endblock %}
+    </div>
     <!--/* Including Bootstrap JS */-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
