--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ url_for('start')}}">Home</a>
-            </li>
               <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('overview')}}">Übersicht</a>
+                  <a class="nav-link active" aria-current="page" href="{{ url_for('start')}}">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('overview')}}">Übersicht</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('analysis')}}">Auswertung</a>
               </li>
           </ul>
         </div>
