--- a/templates/formular.html
+++ b/templates/formular.html
@@ -20,14 +20,25 @@
     </div>
     <br><br><h4>Eckdaten</h4>
     <div class="col-6">
-        <label for="businessunit">Geschäftsfeld</label>
-        <select class="form-select" type="text" name="businessunit" id="businessunit" required>
-            <option selected>Geschäftsfeld auswählen...</option>
-            <option>Informatik</option>
-            <option>Sales</option>
-            <option>Human Ressources</option>
-            <option>Buchhaltung</option>
-        </select>
+        <p>Geschäftsfeld</p>
+        <div class="form-group">
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="businessunit1" name="businessunit" value="Informatik" required>
+            <label class="form-check-label" for="businessunit1">Informatik</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="businessunit2" name="businessunit" value="Sales" required>
+            <label class="form-check-label" for="businessunit2">Sales</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="businessunit3" name="businessunit" value="Marketing" required>
+            <label class="form-check-label" for="businessunit3">Marketing</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="businessunit4" name="businessunit" value="Entwicklung" required>
+            <label class="form-check-label" for="businessunit4">Entwicklung</label>
+        </div>
+        </div>
     </div>
     <div class="col-6">
         <!-- Ändern?? -->
@@ -37,44 +48,107 @@
     </div>
     <p>Wähle die Priorität aus</p>
     <!-- Prio 1 -->
+    <div class="form-group">
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="prio1"/>
+        <input class="form-check-input" type="radio" name="prio" id="prio1" value="1 - hoch">
         <label class="form-check-label" for="prio1"> 1 - hoch </label>
     </div>
     <!-- Prio 2 -->
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="prio2" />
+        <input class="form-check-input" type="radio" name="prio" id="prio2" value="2 - mittel">
         <label class="form-check-label" for="prio2"> 2 - mittel </label>
     </div>
     <!-- Prio 3 -->
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="prio3"/>
+        <input class="form-check-input" type="radio" name="prio" id="prio3" value="3 - tief">
         <label class="form-check-label" for="prio3"> 3 - tief </label>
     </div>
+    </div>
     <br><br><h4>Terminplan</h4>
-    <div class="row">
-    <div class="col-2">
-        <label for="datum">Meilenstein 1</label>
-        <input class="form-control" type="text" name="datum" placeholder="Datum" id="datum">
-        <div class="valid-feedback">Valid.</div>
+    <div class="row col-6">
+        <div class="col-6">
+            <label for="startdatum1">Startdatum</label>
+            <input class="form-control" type="date" name="startdatum" id="startdatum1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="id_meilenstein1">Meilenstein 1</label>
+            <input class="form-control" type="date" name="meilenstein1" id="id_meilenstein1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="id_meilenstein2">Meilenstein 2</label>
+            <input class="form-control" type="date" name="meilenstein2" id="id_meilenstein2">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="id_meilenstein3">Meilenstein 3</label>
+            <input class="form-control" type="date" name="meilenstein3" id="id_meilenstein3">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="id_meilenstein4">Meilenstein 4</label>
+            <input class="form-control" type="date" name="meilenstein4" id="id_meilenstein4">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="enddatum1">Enddatum</label>
+            <input class="form-control" type="date" name="enddatum" id="enddatum1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
     </div>
-    <div class="col-2">
-        <label for="datum">Meilenstein 2</label>
-        <input class="form-control" type="text" name="datum" placeholder="Datum" id="datum">
-        <div class="valid-feedback">Valid.</div>
+    <br><br><h4>Finanzielles</h4>
+    <div class="row col-6">
+        <div class="col-6">
+            <label for="erstesQuartal1">Cash-Out 1. Quartal</label>
+            <input class="form-control" type="number" name="erstesQuartal" id="erstesQuartal1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="zweitesQuartal2">Cash-Out 2. Quartal</label>
+            <input class="form-control" type="number" name="zweitesQuartal" id="zweitesQuartal2">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="drittesQuartal3">Cash-Out 3. Quartal</label>
+            <input class="form-control" type="number" name="drittesQuartal" id="drittesQuartal3">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="viertesQuartal4">Cash-Out 4. Quartal</label>
+            <input class="form-control" type="number" name="viertesQuartal" id="viertesQuartal4">
+            <div class="valid-feedback">Valid.</div>
+        </div>
     </div>
-    <div class="col-2 .offset-sm-2">
-        <label for="datum">Meilenstein 3</label>
-        <input class="form-control" type="text" name="datum" placeholder="Datum" id="datum">
-        <div class="valid-feedback">Valid.</div>
-    </div>
-    <div class="col-2">
-        <label for="datum">Enddatum</label>
-        <input class="form-control" type="text" name="datum" placeholder="Datum" id="datum">
-        <div class="valid-feedback">Valid.</div>
-    </div>
+
+    <br><br><h4>Interner Aufwand</h4>
+    <p>Berechnet zu einem Stundensatz 55.50 CHF</p>
+    <div class="row col-6">
+        <div class="col-6">
+            <label for="informatik1">Anzahl Stunden Informatik</label>
+            <input class="form-control" type="number" name="informatik" id="informatik1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="buchhaltung1">Anzahl Stunden Buchhaltung</label>
+            <input class="form-control" type="number" name="buchhaltung" id="buchhaltung1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="marketing1">Anzahl Stunden Marketing</label>
+            <input class="form-control" type="number" name="marketing" id="marketing1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
+        <div class="col-6">
+            <label for="entwicklung1">Anzahl Stunden Entwicklung</label>
+            <input class="form-control" type="number" name="entwicklung" id="entwicklung1">
+            <div class="valid-feedback">Valid.</div>
+        </div>
     </div>
     <br><br><button type="submit" class="btn btn-primary">Speichern</button><br><br>
+    </div>
+
+
 </form>
 
 
