--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -7,5 +7,9 @@
 <p>
     Auf der untenstehenden Grafik ist die Auswertung der Investitionsprojekte dargestellt.<br><br>
 </p>
+{{ viz_bar|safe}}
+{{ viz_gantt|safe}}
+
+
 
 {% endblock %}
