--- a/templates/overview.html
+++ b/templates/overview.html
@@ -1,10 +1,9 @@
+<!-- base.html wird eingebunden -->
 {% extends "base.html" %}
 {% block title %}Investitionsprojekt{% endblock %}
-
 {% block content %}
-
 <table class="container">
-        <h1>Investitionsprojekte Übersicht</h1>
+    <h1>Investitionsprojekte Übersicht</h1>
         <form method="POST">
             Mittels untenstehendem Auswahlfeld kannst du die Projektanträge nach dem Geschäftsbereich filtern.<br><br>
             <div class="row g-3">
@@ -13,7 +12,7 @@
                         <option selected>Geschäftsbereich auswählen...</option>
                         <option>Informatik</option>
                         <option>Sales</option>
-                        <option>Buchhaltung</option>
+                        <option>Marketing</option>
                         <option>Entwicklung</option>
                     </select>
                 </div>
@@ -25,8 +24,10 @@
         </form>
 
         <div class="column">
-            {% if Filter %}
-            {% if allitems %}
+            <!-- Wenn Filter value = true-->
+            {% if filter %}
+            <!-- Wenn Werte in der gefilterten Liste vorhanden sind -->
+            {% if filter_data %}
             <table class="table">
                 <thead>
                 <tr>
@@ -55,9 +56,11 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for content in allitems %}
+                <!-- Liste von allen dictionaries -->
+                {% for filter_dict in filter_data %}
                 <tr>
-                    {% for key, value in content.items() %}
+                    <!-- alle keys und values der dictionaries durchgehen -->
+                    {% for key, value in filter_dict.items() %}
                     <td>{{ value }}</td>
                     {% endfor %}
                 </tr>
@@ -65,13 +68,12 @@
                 </tbody>
             </table>
             {% else %}
-            Kein Projektantrag zu diesem Filter gefunden.
+            Zu dem gefilterten Geschäftsfeld gibt es kein Projekt.
             {% endif %}
             {% endif %}
         </div>
-        {% if not Filter %}
+        {% if not filter %}
         <table class="table">
-            <!-- for-Condition -->
             <tr>
                 <th scope="col">Antragsteller/in</th>
                 <th scope="col">Projektleiter/in</th>
@@ -96,10 +98,12 @@
                 <th scope="col">Stunden Marketing</th>
                 <th scope="col">Stunden Entwicklung</th>
             </tr>
-            {% for key, values_dict in data.items()%}
+            <!-- Liste von allen dictionaries -->
+            {% for key, values in data.items()%}
             <tr>
-                    {% for key2, value in values_dict.items()%}
-                    <td><p class="value">{{ value }}</p></td>
+                    <!-- alle keys und values der dictionaries durchgehen -->
+                    {% for key2, value in values.items()%}
+                    <td>{{ value }}</td>
                     {% endfor %}
             </tr>
             {% endfor %}
